methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:53: error: expected class or object definition
def deplace(){
^PatternPicture:59: error: Unmatched closing brace '}' ignored here
}
^